--- a/CITATION.bib
+++ b/CITATION.bib
@@ -4,5 +4,5 @@
                    for autodiff through a steady-state solver}},
   month        = may,
   year         = 2019,
-  doi          = {10.5281/zenodo.2667835},
+  doi          = {10.5281/zenodo.2667835}
 }
