--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,7 +1,6 @@
 @misc{F1Method.jl-2019,
   author       = {Beno\^{i}t Pasquier},
-  title        = {{F1Method.jl: A julia package 
-                   for autodiff through a steady-state solver}},
+  title        = {{F1Method.jl: A julia package for computing the gradient and Hessian of an objective function defined implicitly by the solution to a steady-state problem}},
   month        = may,
   year         = 2019,
   doi          = {10.5281/zenodo.2667835}
