--- a/CITATION.bib
+++ b/CITATION.bib
@@ -5,3 +5,11 @@
   year         = 2019,
   doi          = {10.5281/zenodo.2667835}
 }
+
+@article{Pasquier_et_al_2019,
+  author       = {Beno\^{i}t Pasquier and Fran\c{c}ois Primeau and J. Keith Moore},
+  title        = {{The F-1 method: An efficient algorithm for computing the
+  Hessian matrix for parameter optimization and sensitivity analysis
+  in models described by a steady-state system of nonlinear PDEs}},
+  year         = {In preparation}
+}
